Fix width of photo tiles (they were a few pixels too wide)
git-svn-id: file:///Users/gauthierm/svnrepo/pinhole/trunk@19102 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/pinhole-photo-tile.css
+++ b/www/styles/pinhole-photo-tile.css
@@ -1,5 +1,5 @@
 .pinhole-tile-view .swat-tile {
-	width: 130px;
+	width: 126px;
 	height: auto;
 	padding: 0;
 	margin: 5px;
